@@ -9,6 +9,7 @@ rake db:migrate
 
 You need to add the following routes to your config/routes.rb file:
 
+map.resources :oauth_clients
 map.oauth '/oauth',:controller=>'oauth',:action=>'index'
 map.authorize '/oauth/authorize',:controller=>'oauth',:action=>'authorize'
 map.request_token '/oauth/request_token',:controller=>'oauth',:action=>'request_token'
